# spark-rag

./: .env.example  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
docs/: architecture.md  lakehouse-gap-analysis.md  milvus-collections.md  multimodal-lakehouse.md  remaining-work.md
src/spark_rag/: config.py
src/spark_rag/api/: analyzer.py  main.py
src/spark_rag/chunking/: code_chunker.py  doc_chunker.py  issue_chunker.py  so_chunker.py  spark_patterns.py
src/spark_rag/embedding/: client.py
src/spark_rag/ingestion/: code.py  docs.py  github.py  issues.py  stackoverflow.py
src/spark_rag/lance/: __init__.py  cli_embed.py  cli_load.py  embeddings.py  loader.py  polaris_helpers.py  schemas.py  store.py
src/spark_rag/milvus/: collections.py  ingest.py  search.py
src/spark_rag/synthesis/: __init__.py  base.py  claude.py  noop.py
tests/: conftest.py
tests/infra/: test_airflow_requirements.py  test_milvus_requirements.py
tests/integration/: test_embedding.py  test_milvus_crud.py
tests/unit/: test_analyzer.py  test_code_chunker.py  test_collections.py  test_config.py  test_doc_chunker.py  test_embedding.py  test_ingest.py  test_issue_chunker.py  test_lance_schemas.py  test_search.py  test_so_chunker.py  test_spark_patterns.py  test_synthesis.py
