[project]
name = "spark-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "pymilvus>=2.6.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-scala>=0.24.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_rag"]
